Fix territory shortcuts on mobile (#1145)
* Fix territory shortcuts on mobile

- remove zoom controls on mobile
- center search on mobile
- move up the territoriy shortcuts on mobile
- increase height of map on mobile in portrait mode
- update tests

* Reduce map height

- troubleshooting staging map height

* Removes null render in map

* Comment out conditional render of NavControls

* Revert height changes

* Remove MapSearch component

* Remove territory styling

* Console.log the device width

* Add logging width/mobile onLoad()

* Add isMobile to map height prop

* Swap conditional order of map height

* Add isMobileMapState to map height

* Add back all changes and force height to non-100%

- staging mobile seems to have height at 100% regardless of conditional. This will test this.
- this will break desktop on staging and is purposeful

* Remove API key for mapbox

* Add height as 90% to check conditional

* trying isMobile and windowWidth

* is not mobile and width > 1024

* use a function instead of a conditional

* Modify getHeight function

- remove Cypress tests from GHA to speed up build / deplot to staging

* Console.log windowWidth and constants.desktop

* Add boolean console.log

* Place values in DOM itself

* add height to div

* log out types

* add types nicely formatted

* Move height styling on map from inline to parent

- use a media query to detect mobile and set the map parents height via SASS

* Add back cypress tests

--- a/client/src/components/MapSearch/MapSearch.module.scss
+++ b/client/src/components/MapSearch/MapSearch.module.scss
@@ -1,9 +1,20 @@
 @use '../../styles/design-system.scss' as *;
 
 .mapSearchContainer {
+
+    // styles for mobile-lg (480px) and greater widths,
+    @include at-media('mobile-lg') {
+        position: absolute;
+        // top: units(4);
+        left: units(1.5);
+        width: 50%;
+        z-index: 1;
+    }
+    
+    // styles for less than mobile-lg (480px)
     position: absolute;
-    top: units(4);
     left: units(1.5);
-    width: 50%;
+    width: 90%;
     z-index: 1;
 }
+
